# lpc_voltage_glitch_test

./: .gitignore  CMakeLists.txt  README.md  build.sh
docs/: ProDocument_lpc-glitcherv2_2024-04-16.epro
glitcher/: CMakeLists.txt  glitch.c  pio_serializer.pio
lpc/: CMakeLists.txt  Makefile  main.c
lpc/common/: common.h  global.c  global.h
lpc/common/LPC175x_6x/: LPC175x_6x.h  LPC175x_6x.ld  LPC175x_6x_hal.c  LPC175x_6x_hal.h  gcc_startup_LPC175x_6x.S  system_LPC175x_6x.c
lpc/common/LPC177x_8x/: LPC177x_8x_hal.c  LPC177x_8x_hal.h  gcc_startup_LPC177x_8x.S
